# libghostty-ohos

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile.libghostty-vt  README.md  THIRD_PARTY_NOTICES.md  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: BUILD.md  USAGE.md
example/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
example/src/main/: module.json5
example/src/main/cpp/: CMakeLists.txt  example_driver.cpp
example/src/main/cpp/pty/: pty_handler.cpp  pty_handler.h
example/src/main/cpp/ssh/: ssh_session.cpp  ssh_session.h
example/src/main/ets/: native-modules.d.ts
example/src/main/ets/drivers/: ExampleShellDriver.ets
example/src/main/ets/entryability/: EntryAbility.ets
example/src/main/ets/pages/: Index.ets
example/src/main/resources/base/element/: string.json
libghostty_ohos/: CHANGELOG.md  Index.ets  README.md  build-profile.json5  oh-package.json5
libghostty_ohos/example/: README.md  TerminalPage.ets
libghostty_ohos/src/main/: module.json5
libghostty_ohos/src/main/cpp/: CMakeLists.txt  napi_init.cpp
libghostty_ohos/src/main/cpp/include/: ghostty_vt.h
libghostty_ohos/src/main/cpp/include/ghostty/vt/: allocator.h  formatter.h  osc.h  paste.h  terminal.h  types.h
libghostty_ohos/src/main/cpp/include/ghostty/vt/key/: event.h
libghostty_ohos/src/main/cpp/renderer/: native_drawing_renderer.cpp  native_drawing_renderer.h  renderer.h
libghostty_ohos/src/main/cpp/shaders/: terminal.frag  terminal.frag.spv  terminal.vert  terminal.vert.spv
libghostty_ohos/src/main/cpp/terminal/: terminal.cpp  terminal.h  terminal_state.cpp  terminal_state.h  theme.cpp  theme.h
libghostty_ohos/src/main/ets/: TerminalController.ets  TerminalSurface.ets  TerminalTypes.ets
tools/: build-fish-ohos.sh  build-ghostty-vt-docker.sh  ohos-headless-loop.sh
